tests/positive/syntax_error.tx

import { assert_eq_string } from "./utils.tx";
function main() {
    let s = "Escape \"quote\" test";
    let s2 = 'Single \'quote\' test';
    assert_eq_string(s, 'Escape "quote" test');
    assert_eq_string(s2, "Single 'quote' test");

    let err = "unclosed multi-line";
    print("Recovered?");
}
