tests/negative/modules/circular_a.tx
import { foo } from "./circular_b.tx";

export function bar() {
    return foo();
}
